--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "nom-nom",
+  "name": "dca_scoffolding",
   "version": "1.0.0",
-  "description": "",
+  "description": "this is a base project",
   "main": "index.js",
   "scripts": {
-    "start": "tsc --watch",
-    "serve": "serve"
+    "start": "serve",
+    "build": "webpack --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.7.3",
     "serve": "^14.2.0",
-    "typescript": "^5.0.2"
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.2",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1"
   }
 }
